[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
mongodb = "3.4.1"
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15.7"
futures = "0.3.31"
